Added new fields to the student class

--- a/StudentAdmissionMVC/WebContent/WEB-INF/style.css
+++ b/StudentAdmissionMVC/WebContent/WEB-INF/style.css
@@ -20,3 +20,17 @@ align-items:center;
 	text-align:center;
 }
 
+.table , th {
+	text-align:center;
+}
+
+.table ,td {
+	text-align:center;
+}
+
+.studentHeader
+{
+	text-align:center;
+}
+
+
